<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginPage"
    android:padding="20dp">

  <EditText
      android:id="@+id/user_email"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:inputType="textEmailAddress"
      android:hint="@string/email"
      android:layout_marginTop="150dp"
      android:layout_centerHorizontal="true"
      android:drawableStart="@drawable/email_image"
      android:drawablePadding="10dp"/>

  <EditText
      android:id="@+id/user_password"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:inputType="textPassword"
      android:hint="@string/password"
      android:layout_marginTop="30dp"
      android:layout_below="@id/user_email"
      android:layout_centerHorizontal="true"
      android:drawableStart="@drawable/password_image"
      android:drawablePadding="10dp"/>

  <Button
      android:id="@+id/login_btn"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_below="@id/user_password"
      android:layout_marginTop="50dp"
      android:text="@string/login"
      android:textAllCaps="false"
      android:textSize="20sp"
      android:layout_centerHorizontal="true"/>

  <Button
      android:id="@+id/create_account_btn"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:background="#00000000"
      android:layout_below="@id/login_btn"
      android:layout_marginTop="10dp"
      android:text="@string/create_an_account"
      android:layout_centerHorizontal="true"
      android:textSize="20sp"
      android:textAllCaps="false"/>

  <Button
      android:id="@+id/forgot_pwd_btn"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:background="#00000000"
      android:layout_below="@id/create_account_btn"
      android:layout_marginTop="10dp"
      android:text="@string/forgot_password"
      android:layout_centerHorizontal="true"
      android:textSize="20sp"
      android:textAllCaps="false"/>

  </RelativeLayout>