<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.RegisterPage"
    android:padding="20dp">

    <EditText
        android:id="@+id/new_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/email_image"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        android:layout_below="@id/new_email"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/password_image"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/new_dob"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="date"
        android:hint="@string/date_of_birth"
        android:layout_marginTop="30dp"
        android:layout_below="@id/new_password"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/calendar_image"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/new_dob"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/already_have_account_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00000000"
        android:layout_below="@id/register_btn"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textAllCaps="false"/>

</RelativeLayout>